test-data/invalid/param-invalid-child.jsx
const ParamInvalidChild = () => (
    <Translate>
        <Param name="foo">{1}</Param>
    </Translate>
);
